...
                        ```json
                        {
                            "items": [
                                {
                                    "id": "random id in 6 characters",
                                    "title": "Title",
                                    "url": "https://example.com",
                                    "text": "Some relevant snippets",
                                    "source": "Example",
                                    "publishedAt": "Sun, 20 Sep 2026 10:00:00 GMT"
                                }
                            ],
                            "images": [
...
